kubeflow-deployments/jlewi-0926-002/kustomize/metadata/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metadata-ui
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /metadata
    rewrite:
      uri: /metadata
    route:
    - destination:
        host: $(service).$(ui-namespace).svc.$(ui-clusterDomain)
        port:
          number: 80
    timeout: 300s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metadata-grpc-service
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /ml_metadata.MetadataStoreService
    rewrite:
      uri: /ml_metadata.MetadataStoreService
    route:
    - destination:
        #host: $(service).$(ui-namespace).svc.$(ui-clusterDomain)
        # TODO(jlewi): Should ew parameterize the  servidce name and ui-namespace
        host: metadata-grpc-service.kubeflow.svc.cluster.local
        port:
          number: 8080
    timeout: 300s
